--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,1 +1,70 @@
-<p>login works!</p>
+<div class="container">
+  <mat-card>
+    <mat-card-title>Login</mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="loginForm">
+        <mat-form-field appearance="outline">
+          <mat-label>Email</mat-label>
+          <input
+            matInput
+            formControlName="email"
+            placeholder="Email"
+            required
+          />
+          <mat-error
+            *ngIf="
+              loginForm.controls['email'].invalid &&
+              loginForm.controls['email'].touched
+            "
+          >
+            Please enter a valid email!
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Password</mat-label>
+          <input
+            matInput
+            [type]="hidePassword ? 'password' : 'text'"
+            formControlName="password"
+            placeholder="Password"
+            required
+          />
+          <button
+            mat-icon-button
+            matSuffix
+            (click)="togglePasswordVisibility()"
+          >
+            <mat-icon>{{
+              hidePassword ? "visibility_off" : "visibility"
+            }}</mat-icon>
+          </button>
+          <mat-error
+            *ngIf="
+              signupForm.controls['password'].invalid &&
+              signupForm.controls['password'].touched
+            "
+          >
+            Please enter a valid password!
+          </mat-error>
+        </mat-form-field>
+
+        <button
+          mat-raised-button
+          class="submit-btn"
+          color="primary"
+          type="submit"
+          [disabled]="loginForm.invalid"
+          (click)="onSubmit()"
+        >
+          Login
+        </button>
+      </form>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <button mat-button routerLinkActive="active" routerLink="/signup">
+        Don't have an account? Sign up
+      </button>
+  </mat-card>
+</div>
