--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="!isEmployeeLoggedIn && !isAdminLoggedIn">
   <mat-toolbar color="primary" class="navbar">
     <span class="navbar-brand">TaskMaster</span>
     <span class="spacer"></span>
@@ -7,6 +7,36 @@
     </button>
     <button mat-button routerLinkActive="active" routerLink="/login">
       Login
+    </button>
+  </mat-toolbar>
+</div>
+
+<div *ngIf="isAdminLoggedIn">
+  <mat-toolbar color="primary" class="navbar">
+    <span class="navbar-brand">Admin</span>
+    <span class="spacer"></span>
+    <button mat-button routerLinkActive="active" routerLink="/admin/dashboard">
+      Dashboard
+    </button>
+    <button mat-button routerLinkActive="active" (click)="logout()">
+      Logout
+    </button>
+  </mat-toolbar>
+</div>
+
+<div *ngIf="isEmployeeLoggedIn">
+  <mat-toolbar color="primary" class="navbar">
+    <span class="navbar-brand">Employee</span>
+    <span class="spacer"></span>
+    <button
+      mat-button
+      routerLinkActive="active"
+      routerLink="/employee/dashboard"
+    >
+      Dashboard
+    </button>
+    <button mat-button routerLinkActive="active" (click)="logout()">
+      Logout
     </button>
   </mat-toolbar>
 </div>
