implemented the post-task.component functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,9 @@
     <button mat-button routerLinkActive="active" routerLink="/admin/dashboard">
       Dashboard
     </button>
+    <button mat-button routerLinkActive="active" routerLink="/admin/task">
+      Post Task
+    </button>
     <button mat-button routerLinkActive="active" (click)="logout()">
       Logout
     </button>
