--- a/src/app/modules/admin/components/post-task/post-task.component.html
+++ b/src/app/modules/admin/components/post-task/post-task.component.html
@@ -1,1 +1,83 @@
-<p>post-task works!</p>
+<div class="container">
+  <h2>Post Task</h2>
+
+  <form [formGroup]="taskForm">
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Title</mat-label>
+      <input matInput type="text" formControlName="title" placeholder="Title" />
+      <mat-error *ngIf="taskForm.get('title').hasError('required')">
+        This input is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Description</mat-label>
+      <textarea
+        matInput
+        formControlName="description"
+        placeholder="Description"
+      ></textarea>
+      <mat-error *ngIf="taskForm.get('description').hasError('required')">
+        This input is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>DueDate</mat-label>
+      <input
+        matInput
+        [matDatePicker]="dueDatePicker"
+        formControlName="DueDate"
+        placeholder="Choose a due date "
+      />
+      <mat-datepicker-toggle
+        matSuffix
+        [for]="dueDatePicker"
+      ></mat-datepicker-toggle>
+      <mat-datepicker #dueDatePicker></mat-datepicker>
+      <mat-error *ngIf="taskForm.get('dueDate').hasError('required')">
+        This input is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Select the Priority</mat-label>
+      <mat-select formControlName="priority" name="priority">
+        <mat-option
+          [value]="priority"
+          *ngFor="let priority of listOfPriorities"
+        >
+          {{ priority }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="taskForm.get('priority').hasError('required')">
+        This input is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Select the Employee</mat-label>
+      <mat-select formControlName="employeeId" name="employeeId">
+        <mat-option
+          [value]="employee.id"
+          *ngFor="let priority of listOfEmployees"
+        >
+          {{ employee.name }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="taskForm.get('employeeId').hasError('required')">
+        This input is required
+      </mat-error>
+    </mat-form-field>
+
+    <button
+      mat-raised-button
+      type="submit"
+      color="primary"
+      (click)="postTask()"
+      [disabled]="taskForm.invalid"
+    >
+      Post Task
+    </button>
+  </form>
+</div>
