--- a/src/app/modules/admin/components/post-task/post-task.component.html
+++ b/src/app/modules/admin/components/post-task/post-task.component.html
@@ -5,7 +5,7 @@
     <mat-form-field appearance="outline" class="form-field">
       <mat-label>Title</mat-label>
       <input matInput type="text" formControlName="title" placeholder="Title" />
-      <mat-error *ngIf="taskForm.get('title').hasError('required')">
+      <mat-error *ngIf="taskForm.get('title')?.hasError('required')">
         This input is required
       </mat-error>
     </mat-form-field>
@@ -17,7 +17,7 @@
         formControlName="description"
         placeholder="Description"
       ></textarea>
-      <mat-error *ngIf="taskForm.get('description').hasError('required')">
+      <mat-error *ngIf="taskForm.get('description')?.hasError('required')">
         This input is required
       </mat-error>
     </mat-form-field>
@@ -26,23 +26,23 @@
       <mat-label>DueDate</mat-label>
       <input
         matInput
-        [matDatePicker]="dueDatePicker"
-        formControlName="DueDate"
-        placeholder="Choose a due date "
+        [matDatepicker]="dueDatePicker"
+        formControlName="dueDate"
+        placeholder="Choose a due date"
       />
       <mat-datepicker-toggle
         matSuffix
         [for]="dueDatePicker"
       ></mat-datepicker-toggle>
       <mat-datepicker #dueDatePicker></mat-datepicker>
-      <mat-error *ngIf="taskForm.get('dueDate').hasError('required')">
+      <mat-error *ngIf="taskForm.get('dueDate')?.hasError('required')">
         This input is required
       </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="form-field">
       <mat-label>Select the Priority</mat-label>
-      <mat-select formControlName="priority" name="priority">
+      <mat-select formControlName="priority">
         <mat-option
           [value]="priority"
           *ngFor="let priority of listOfPriorities"
@@ -50,22 +50,22 @@
           {{ priority }}
         </mat-option>
       </mat-select>
-      <mat-error *ngIf="taskForm.get('priority').hasError('required')">
+      <mat-error *ngIf="taskForm.get('priority')?.hasError('required')">
         This input is required
       </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="form-field">
       <mat-label>Select the Employee</mat-label>
-      <mat-select formControlName="employeeId" name="employeeId">
+      <mat-select formControlName="employeeId">
         <mat-option
           [value]="employee.id"
-          *ngFor="let priority of listOfEmployees"
+          *ngFor="let employee of listOfEmployees"
         >
           {{ employee.name }}
         </mat-option>
       </mat-select>
-      <mat-error *ngIf="taskForm.get('employeeId').hasError('required')">
+      <mat-error *ngIf="taskForm.get('employeeId')?.hasError('required')">
         This input is required
       </mat-error>
     </mat-form-field>
