Implemented pagination for the number of tasks to be displayed on the page at a time

--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -1,1 +1,47 @@
-<p>dashboard works!</p>
+<section class="container">
+  <div class="task-list">
+    <mat-card class="task-card" *ngFor="let task of listOfTasks">
+      <div class="task-details">
+        <h2 class="task-name">{{ task.title }}</h2>
+        <p class="task-description">{{ task.description }}</p>
+
+        <mat-divider></mat-divider>
+
+        <div class="task-info">
+          <div class="info-row">
+            <span class="info-label">Due Date:</span>
+            <span class="info-value">{{
+              task.dueDate | date : "MMM  d, y"
+            }}</span>
+          </div>
+
+          <div class="info-row">
+            <span class="info-label">Employee:</span>
+            <span class="info-value">{{ task.employeeName }}</span>
+          </div>
+
+          <div class="info-row">
+            <span class="info-label">Priority:</span>
+            <span class="info-value">{{ task.priority }}</span>
+          </div>
+
+          <div class="info-row">
+            <span class="info-label">Status:</span>
+            <span class="info-value">{{ task.taskStatus }}</span>
+          </div>
+        </div>
+
+        <mat-divider></mat-divider>
+      </div>
+    </mat-card>
+  </div>
+  <!-- Paginator to navigate between pages -->
+  <mat-paginator
+    class="paginator"
+    [length]="totalTasks"
+    [pageSize]="pageSize"
+    [pageIndex]="pageIndex"
+    (page)="onPageChange($event)"
+  >
+  </mat-paginator>
+</section>
