--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -32,6 +32,33 @@
         </div>
 
         <mat-divider></mat-divider>
+        <div class="actions">
+          <!--   <button
+            mat-icon-button
+            color="accent"
+            class="view-button"
+            routerLink="/admin/task-details/{{ task.id }}"
+          >
+            <mat-icon>visibility</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            color="primary"
+            class="update-button"
+            routerLink="'/admin/task/' + task.id + '/edit'"
+          >
+            <mat-icon>edit</mat-icon>
+          </button> -->
+
+          <button
+            mat-icon-button
+            color="warn"
+            class="delete-button"
+            (click)="deleteTask(task.id)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
       </div>
     </mat-card>
   </div>
