--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -40,15 +40,16 @@
             routerLink="/admin/task-details/{{ task.id }}"
           >
             <mat-icon>visibility</mat-icon>
-          </button>
-          <button
+          </button> -->
+
+          <a
             mat-icon-button
             color="primary"
             class="update-button"
-            routerLink="'/admin/task/' + task.id + '/edit'"
+            [routerLink]="'/admin/task/' + task.id + '/edit'"
           >
             <mat-icon>edit</mat-icon>
-          </button> -->
+          </a>
 
           <button
             mat-icon-button
