--- a/src/app/modules/admin/components/update-task/update-task.component.html
+++ b/src/app/modules/admin/components/update-task/update-task.component.html
@@ -1,1 +1,85 @@
-<p>update-task works!</p>
+<div class="container">
+  <h2>Update Task</h2>
+
+  <form [formGroup]="updateTaskForm">
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Title</mat-label>
+      <input matInput type="text" formControlName="title" placeholder="Title" />
+      <mat-error *ngIf="updateTaskForm.get('title')?.hasError('required')">
+        This input is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Description</mat-label>
+      <textarea
+        matInput
+        formControlName="description"
+        placeholder="Description"
+      ></textarea>
+      <mat-error
+        *ngIf="updateTaskForm.get('description')?.hasError('required')"
+      >
+        This input is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>DueDate</mat-label>
+      <input
+        matInput
+        [matDatepicker]="dueDatePicker"
+        formControlName="dueDate"
+        placeholder="Choose a due date"
+      />
+      <mat-datepicker-toggle
+        matSuffix
+        [for]="dueDatePicker"
+      ></mat-datepicker-toggle>
+      <mat-datepicker #dueDatePicker></mat-datepicker>
+      <mat-error *ngIf="updateTaskForm.get('dueDate')?.hasError('required')">
+        This input is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Select the Priority</mat-label>
+      <mat-select formControlName="priority">
+        <mat-option
+          [value]="priority"
+          *ngFor="let priority of listOfPriorities"
+        >
+          {{ priority }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="updateTaskForm.get('priority')?.hasError('required')">
+        This input is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Select the Employee</mat-label>
+      <mat-select formControlName="employeeId">
+        <mat-option
+          [value]="employee.id"
+          *ngFor="let employee of listOfEmployees"
+        >
+          {{ employee.name }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="updateTaskForm.get('employeeId')?.hasError('required')">
+        This input is required
+      </mat-error>
+    </mat-form-field>
+
+    <button
+      mat-raised-button
+      type="submit"
+      color="primary"
+      (click)="updateTask()"
+      [disabled]="updateTaskForm.invalid"
+    >
+      Update Task
+    </button>
+  </form>
+</div>
