Implemented the detailed page

--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -1,4 +1,11 @@
+<form class="search-form">
+  <mat-form-field appearance="outline" class="search-input">
+    <mat-label>Search by keyword or title</mat-label>
+    <input class="search-input-field" matInput />
+  </mat-form-field>
+</form>
 <section class="container">
+  <h2 class="title">Task List</h2>
   <div class="task-list">
     <mat-card class="task-card" *ngFor="let task of listOfTasks">
       <div class="task-details">
