--- a/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -1,6 +1,33 @@
 
+.search-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // width: 100%;
+    // margin: 1rem auto;
+
+    
+    .search-input {
+        width: 500px;
+        margin: 0 auto;
+
+  
+          mat-form-field {
+            // width: 100%;
+            border-radius: 8px !important;
+            background: #f9f9f9;
+            }
+    
+      
+     
+    }
+  }
+  
 .container{
     padding: 2rem 1rem;
+    background: #f9f9f9;
+
+    
     .paginator{
         display: flex;
         justify-content: center;
@@ -8,6 +35,14 @@
         font-size: 1rem;
         color: #555;
         font-weight: 500;
+    }
+
+    .title{
+        font-size: 1.8rem;
+        margin-bottom: 1.5rem;
+        color: #333;
+        text-align: center;
+        font-weight: bold;
     }
     .task-list {
         display: grid;
