--- a/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -1,31 +1,33 @@
 
-.search-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // width: 100%;
-    // margin: 1rem auto;
 
-    
-    .search-input {
-        width: 500px;
-        margin: 0 auto;
-
-  
-          mat-form-field {
-            // width: 100%;
-            border-radius: 8px !important;
-            background: #f9f9f9;
-            }
-    
-      
-     
-    }
-  }
   
 .container{
     padding: 2rem 1rem;
     background: #f9f9f9;
+    .title{
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+        color: #333;
+        text-align: start;
+        padding: 0 2rem;
+        font-weight: bold;
+    }
+    .search-form{
+        display: flex;align-items:center;
+        justify-content: center;
+        margin-top:1rem;
+        margin-bottom: 1.5rem;
+
+        .search-input{
+            width: 100%;
+            max-width: 500px;
+            margin-right: 15px;
+        }
+
+        input{
+            padding-right: 40px;
+        }
+    }
 
     
     .paginator{
@@ -37,13 +39,6 @@
         font-weight: 500;
     }
 
-    .title{
-        font-size: 1.8rem;
-        margin-bottom: 1.5rem;
-        color: #333;
-        text-align: center;
-        font-weight: bold;
-    }
     .task-list {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
