--- a/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -6,16 +6,16 @@
     background: #f9f9f9;
     .title{
         font-size: 1.5rem;
-        margin-bottom: 1rem;
+        margin-bottom: 5px;
         color: #333;
         text-align: start;
-        padding: 0 2rem;
+        padding: 0 1.5rem;
         font-weight: bold;
     }
     .search-form{
         display: flex;align-items:center;
         justify-content: center;
-        margin-top:1rem;
+        margin-top: 1rem;
         margin-bottom: 1.5rem;
 
         .search-input{
@@ -42,8 +42,8 @@
     .task-list {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 1.5rem;
-        padding: 2rem;
+        gap: 1.3rem;
+        padding: 2rem 1.5rem;
 
         .mat-paginator {
             margin-top: 1rem;
