--- a/src/app/modules/employee/components/dashboard/dashboard.component.html
+++ b/src/app/modules/employee/components/dashboard/dashboard.component.html
@@ -1,1 +1,32 @@
-<p>Dashboard works!</p>
+<div class="container">
+  <h2 class="title">Employee detailed tasks page</h2>
+  <div class="task-list">
+    <mat-card class="task-card" *ngFor="let task of listOfTasks">
+      <div class="task-details">
+        <h2 class="task-name">{{ task.title }}</h2>
+        <p class="task-description">{{ task.description }}</p>
+        <mat-divider></mat-divider>
+        <div class="task-info">
+          <div class="info-row">
+            <span class="info-label">Due Date:</span>
+            <span class="info-value">{{
+              task.dueDate | date : "MMM  d, y"
+            }}</span>
+          </div>
+          <div class="info-row">
+            <span class="info-label">Employee:</span>
+            <span class="info-value">{{ task.employeeName }}</span>
+          </div>
+          <div class="info-row">
+            <span class="info-label">Priority:</span>
+            <span class="info-value">{{ task.priority }}</span>
+          </div>
+          <div class="info-row">
+            <span class="info-label">Status:</span>
+            <span class="info-value">{{ task.taskStatus }}</span>
+          </div>
+        </div>
+      </div>
+    </mat-card>
+  </div>
+</div>
