Called an update Task status API for the Employee in Angular

--- a/src/app/modules/employee/components/dashboard/dashboard.component.html
+++ b/src/app/modules/employee/components/dashboard/dashboard.component.html
@@ -26,6 +26,33 @@
             <span class="info-value">{{ task.taskStatus }}</span>
           </div>
         </div>
+
+        <mat-divider></mat-divider>
+        <div class="actions">
+          <button
+            mat-icon-button
+            color="primary"
+            class="update-button"
+            [matMenuTriggerFor]="statusMenu"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+
+          <mat-menu #statusMenu="matMenu">
+            <button
+              mat-menu-item
+              (click)="updateTaskStatus(task.id, 'INPROGRESS')"
+            >
+              INPROGRESS
+            </button>
+            <button
+              mat-menu-item
+              (click)="updateTaskStatus(task.id, 'COMPLETED')"
+            >
+              COMPLETED
+            </button>
+          </mat-menu>
+        </div>
       </div>
     </mat-card>
   </div>
