Successfully Created a page for the Admin to view the task details

--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -40,14 +40,14 @@
 
         <mat-divider></mat-divider>
         <div class="actions">
-          <!--   <button
+          <button
             mat-icon-button
             color="accent"
             class="view-button"
             routerLink="/admin/task-details/{{ task.id }}"
           >
             <mat-icon>visibility</mat-icon>
-          </button> -->
+          </button>
 
           <a
             mat-icon-button
