--- a/src/app/modules/employee/components/dashboard/dashboard.component.html
+++ b/src/app/modules/employee/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="title">Employee detailed tasks page</h2>
+  <h2 class="title">Employee Task page</h2>
   <div class="task-list">
     <mat-card class="task-card" *ngFor="let task of listOfTasks">
       <div class="task-details">
