--- a/src/app/modules/admin/components/view-task-details/view-task-details.component.html
+++ b/src/app/modules/admin/components/view-task-details/view-task-details.component.html
@@ -1,6 +1,6 @@
-<div class="container" *ngIf="taskData">
+<section class="container" *ngIf="taskData">
   <h2 class="title">Employee detailed tasks page</h2>
-  <div class="task-list">
+  <div class="task-list" *ngIf="taskData">
     <mat-card class="task-card">
       <div class="task-details">
         <h2 class="task-name">{{ taskData.title }}</h2>
@@ -15,14 +15,23 @@
               taskData.dueDate | date : "MMM  d, y"
             }}</span>
           </div>
+
+          <mat-divider></mat-divider>
+
           <div class="info-row">
             <span class="info-label">Employee:</span>
             <span class="info-value">{{ taskData.employeeName }}</span>
           </div>
+
+          <mat-divider></mat-divider>
+
           <div class="info-row">
             <span class="info-label">Priority:</span>
             <span class="info-value">{{ taskData.priority }}</span>
           </div>
+
+          <mat-divider></mat-divider>
+
           <div class="info-row">
             <span class="info-label">Status:</span>
             <span class="info-value">{{ taskData.taskStatus }}</span>
@@ -31,4 +40,35 @@
       </div>
     </mat-card>
   </div>
-</div>
+
+  <mat-card class="comment-card">
+    <mat-card-content>
+      <mat-card-header>
+        <mat-card-title>Pubish Your Comments</mat-card-title>
+      </mat-card-header>
+
+      <div>
+        <form [formGroup]="commentForm">
+          <mat-form-field appearance="fill" class="form-field">
+            <mat-label>Comment</mat-label>
+            <textarea
+              matInput
+              formControlName="comment"
+              placeholder="Type your comment here..."
+            ></textarea>
+
+            <button
+              mat-raised-button
+              color="primary"
+              style="margin-top: 10px; float: right"
+              (click)="publishComment()"
+              [disabled]="!commentForm.valid"
+            >
+              Publish Comment
+            </button>
+          </mat-form-field>
+        </form>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</section>
