--- a/src/app/modules/admin/components/view-task-details/view-task-details.component.html
+++ b/src/app/modules/admin/components/view-task-details/view-task-details.component.html
@@ -71,4 +71,32 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <div
+    style="
+      margin-top: 3px;
+      items-align: center;
+      display: flex;
+      justify-content: start;
+      width: 100%;
+    "
+    class="task-list"
+  >
+    <div class="comments">
+      <h2 class="title">Comments</h2>
+      <mat-card *ngFor="let comment of comments">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+
+          <mat-card-title>{{ comment.postedBy }}</mat-card-title>
+          <mat-card-subtitle>{{
+            comment.createdAt | date : "medium"
+          }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content class="comment-content">
+          {{ comment.content }}
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 </section>
