--- a/src/app/modules/employee/components/dashboard/dashboard.component.html
+++ b/src/app/modules/employee/components/dashboard/dashboard.component.html
@@ -43,6 +43,15 @@
         <div class="actions">
           <button
             mat-icon-button
+            color="accent"
+            class="view-button"
+            routerLink="/employee/task-details/{{ task.id }}"
+          >
+            <mat-icon>visibility</mat-icon>
+          </button>
+
+          <button
+            mat-icon-button
             color="primary"
             class="update-button"
             [matMenuTriggerFor]="statusMenu"
