--- a/src/app/modules/employee/components/view-task-details/view-task-details.component.html
+++ b/src/app/modules/employee/components/view-task-details/view-task-details.component.html
@@ -1,6 +1,6 @@
 <section class="container" *ngIf="taskData">
   <h2 class="title">Employee detailed tasks page</h2>
-  <div class="task-list" *ngIf="taskData">
+  <div class="task-list">
     <mat-card class="task-card">
       <div class="task-details">
         <h2 class="task-name">{{ taskData.title }}</h2>
